Error modal - ensure visibility over other modals
when another modal window is visible (like the v2v wizard),
when the error modal appears, it appears under the existing modal - not visible

overriding the z-index value so that the error is always visible

--- a/app/assets/stylesheets/patternfly_overrides.scss
+++ b/app/assets/stylesheets/patternfly_overrides.scss
@@ -755,6 +755,10 @@ td.action > .btn.btn-default {
   }
 }
 
+#errorModal .modal.show {
+  z-index: 2000;
+}
+
 /// force word-break for long text strings in modals
 
 .modal-body p {
